--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,10 @@ lottie-player{
 }
 .apps{
     background-color: #A685E2;
-    margin: 5% 60% 20% 10%;
-    
+    margin: 5% 80% 20% 10%;
+}
+.apps-1{
+    margin: 5% 50% 100% 40%;
 }
 
 
