Diffrenent file for project created.

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,13 @@ lottie-player{
     margin: 10% 25% 3% 30%;
     background-color: #CFE5CF
 }
+.projectButton{
+    padding-top: 5%;
+}
+#WelcomeSection{
+    margin: 10% 10% 10% 10%;
+    text-align: center;
+}
 
 
 
