--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@
 }
 .codeView{
     padding: 10% 35% 10% 0%;
-    margin: auto auto auto 23%;
+    margin: auto 10% auto 23%;
 }
 #MidTwoView{
     padding: 5% 3% 5% 30%;
@@ -102,24 +102,23 @@ lottie-player{
     padding: auto auto 10% auto;
 }
 #WelcomeSection{
-    background: linear-gradient(125deg, #ECFCFF 0%, #ECFCFF 40%, #B2FCFF calc(40% + 1px), #B2FCFF 60%, #5EDFFF calc(60% + 1px), #5EDFFF 72%, #3E64FF calc(72% + 1px), #3E64FF 100%);
+    background: linear-gradient(45deg, #C7F5FE 10%, #C7F5FE 40%, #FCC8F8 40%, #FCC8F8 60%, #EAB4F8 60%, #EAB4F8 65%, #F3F798 65%, #F3F798 90%);
     background-color: #F8EDED;
     margin: 10% 10% 10% 10%;
 }
 #app{
-    background: linear-gradient(125deg, #ECFCFF 0%, #ECFCFF 40%, #B2FCFF calc(40% + 1px), #B2FCFF 60%, #5EDFFF calc(60% + 1px), #5EDFFF 72%, #3E64FF calc(72% + 1px), #3E64FF 100%);
+    background: linear-gradient(45deg, #C7F5FE 10%, #C7F5FE 40%, #FCC8F8 40%, #FCC8F8 60%, #EAB4F8 60%, #EAB4F8 65%, #F3F798 65%, #F3F798 90%);
     background-color: #F8EDED;
 }
 .LastSection{
     background-image: url("../Images/wave-2.png");
     background-color: #FFE3FE;
+    text-align: center;
 }
 .resumeButton{
-    margin-bottom: 5%;
+    margin: auto auto 5% auto;
 }
 .appText{
-    background-image: url("../Images/wave-2.png");
-    background-color: #FFE3FE;
     margin: 2% 10% 10% 10%;
     background: rgba( 255, 255, 255, 0 );
 box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
@@ -134,7 +133,7 @@ animation: backwards;
     padding: 2% 0% 2% 0%;
 }
 #other{
-    background: linear-gradient(125deg, #ECFCFF 0%, #ECFCFF 40%, #B2FCFF calc(40% + 1px), #B2FCFF 60%, #5EDFFF calc(60% + 1px), #5EDFFF 72%, #3E64FF calc(72% + 1px), #3E64FF 100%);
+    background: linear-gradient(45deg, #C7F5FE 10%, #C7F5FE 40%, #FCC8F8 40%, #FCC8F8 60%, #EAB4F8 60%, #EAB4F8 65%, #F3F798 65%, #F3F798 90%);
     background-color: #F8EDED;
     margin: 10% 10% 10% 10%;
 }
@@ -170,6 +169,7 @@ animation: backwards;
     margin: auto;
     opacity: 0.5;
 }
+
 
 
 
