--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 #MainView{
     padding: 3% 5% 5% 5%;
 }
@@ -174,6 +175,31 @@ animation: backwards;
     margin: auto;
     opacity: 0.5;
 }
+
+#container {
+    width: 100%;
+  min-height: 100vh;
+
+  /* Centers the container in the middle of the screen */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin: 0;
+  background-color: rgb(220, 220, 220);
+    perspective: 25px;
+  }
+  #container:hover {
+    cursor: pointer;
+  }
+  
+  
+  
+  #inner {
+    transition: transform 0.5s;
+    -webkit-transition: transform 0.5s;
+    box-shadow: 2px 2px 50px rgba(0, 0, 0, 0.2);
+  }
 
 
 
