--- a/css/style.css
+++ b/css/style.css
@@ -181,25 +181,21 @@ animation: backwards;
   min-height: 100vh;
 
   /* Centers the container in the middle of the screen */
-  display: flex;
   justify-content: center;
   align-items: center;
-
-  margin: 0;
   background-color: rgb(220, 220, 220);
-    perspective: 25px;
+  perspective: 40px;
   }
   #container:hover {
     cursor: pointer;
   }
-  
-  
-  
   #inner {
+    margin: 20% 20% 20% 20%;
     transition: transform 0.5s;
     -webkit-transition: transform 0.5s;
     box-shadow: 2px 2px 50px rgba(0, 0, 0, 0.2);
   }
+  
 
 
 
