Commit error fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -173,8 +173,11 @@ animation: backwards;
     margin: auto;
     font-size: 30px;
 }
+/* */
 .lastSubText{
     margin: auto;
     opacity: 0.5;
 }
+
+
 
